# ros_roverbot_ws

./: .gitignore  .gitmodules  README.md
helperfiles/: opencv_install  roverbot.service  roverstartup.sh  show_video.html  testsmbus.py
helperfiles/misc/: cmds.md
helperfiles/misc/PWMs-on-BBB-master/: quad_comm_pwms-00A0.dts
helperfiles/misc/QuadControl-cpp-master/: README.md
helperfiles/misc/QuadControl-cpp-master/Ground_station/: .cproject.xml
helperfiles/misc/QuadControl-cpp-master/Ground_station/src/: Data_socket.h  Ground_station.cpp  MPU6050.cpp  State_data_manager.cpp  UDPcommGroundOnboard.h  joystick.cpp  joystick.h  kinematic_estimators.cpp  kinematic_estimators.h  new  2.txt  pwm_4motor.h  quaternion_operations.cpp  serialib.cpp  udpPort.cpp  udpPort.h  vicon_data_custom.h
helperfiles/misc/QuadControl-cpp-master/MPU6050i2c/: .cproject.xml
helperfiles/misc/QuadControl-cpp-master/SPI_test/: .cproject.xml
helperfiles/misc/QuadControl-cpp-master/SPI_test/src/: Motor_spi_comm.h  SPI_test.cpp  load_overlay_spi_4ss.sh
helperfiles/misc/QuadControl-cpp-master/Single_Multi_control/: .cproject.xml
helperfiles/misc/QuadControl-cpp-master/System_ID_Data_logging/: InputOutputData_100ms_new.txt  control_profile.m  models_tfs.m
helperfiles/misc/QuadControl-cpp-master/System_ID_Data_logging/src/: Motor_spi_comm_modf_datalog.h  System_ID_Data_logging.cpp
helperfiles/misc/QuadControl-cpp-master/estimation/: .cproject.xml  .project.xml
helperfiles/misc/QuadControl-cpp-master/joystick_test/: .cproject.xml
helperfiles/misc/QuadControl-cpp-master/joystick_test/src/: joystick.cpp  joystick_test.cpp
helperfiles/misc/QuadControl-cpp-master/pwm_test/: .cproject.xml  .project.xml
helperfiles/misc/QuadControl-cpp-master/pwm_test/src/: pwm_test.cpp
helperfiles/misc/QuadControl-cpp-master/source_codes/: Motor_spi_comm.h  SimpleTimer.h  timeSeqFilters.h
helperfiles/misc/QuadControl-cpp-master/testimu/: .cproject.xml  .project.xml
helperfiles/misc/QuadControl-cpp-master/testimu/src/: EKF.h  SerialcommGroundOnboard.cpp  UDPcommGroundOnboard.cpp  initialize_parameters.h  kinematic_estimators.h  udpPort.cpp  udpPort.h
helperfiles/misc/QuadControl-cpp-master/working_source_codes/: MPU6050.h  Motor_i2c_comm.h
helperfiles/misc/QuadControl-cpp-master/xbee_testing/: .project.xml
helperfiles/misc/QuadControl-cpp-master/xbee_testing/src/: serialib.h  xbee_testing.cpp
helperfiles/misc/src/: MPU6050.h  pwm_test.cpp  quaternion_operations.cpp
misc/: uEnv.txt
motori2c/motori2c/: motori2c.ino
motori2c/motori2c/motori2c_simple.ino/: motori2c_simple.ino.ino
src/roverbot/: CMakeLists.txt  package.xml
src/roverbot/cfg/: Roverbot.cfg
src/roverbot/extsrc/: I2Cdev.cpp  INA219.cpp  MB1242.cpp  MPU6050.cpp  realsensecv2.cpp2
src/roverbot/include/roverbot/: I2Cdev.h  INA219.h  MB1242.h  MPU6050.h  pwm_gpio_ctrl.h
src/roverbot/launch/: roverbot.launch
src/roverbot/misc/MB1242-master/examples/ChangeAddress/: ChangeAddress.ino
src/roverbot/misc/PWMs-on-BBB-master/: README.md
src/roverbot/misc/QuadControl-cpp-master/Ground_station/: .project.xml
src/roverbot/misc/QuadControl-cpp-master/Ground_station/src/: BlackBoxRecorder.h  I2Cdev.h  State_data_manager.h  controllers.h  quaternion_operations.h  todo.h
src/roverbot/misc/QuadControl-cpp-master/MPU6050i2c/: .project.xml
src/roverbot/misc/QuadControl-cpp-master/SPI_test/: .project.xml
src/roverbot/misc/QuadControl-cpp-master/Single_Multi_control/: .project.xml  main.c
src/roverbot/misc/QuadControl-cpp-master/System_ID_Data_logging/: .cproject.xml  .project.xml  InputCtrl.txt  InputOutputData_10ms_new.txt  InputOutputData_50ms_new.txt
src/roverbot/misc/QuadControl-cpp-master/System_ID_Data_logging/src/: pwm_4motor.h
src/roverbot/misc/QuadControl-cpp-master/joystick_test/: .project.xml
src/roverbot/misc/QuadControl-cpp-master/joystick_test/src/: joystick.h
src/roverbot/misc/QuadControl-cpp-master/pwm_test/: quad_pwms-00A0.dts
src/roverbot/misc/QuadControl-cpp-master/pwm_test/src/: pwm_4motor.h  quad_comm_pwms-00A0.dtbo  quad_comm_pwms-00A0.dts
src/roverbot/misc/QuadControl-cpp-master/source_codes/: pwm_control.h  quaternion_operations.h
src/roverbot/misc/QuadControl-cpp-master/testimu/src/: DataManager.h  EKF.cpp  I2Cdev.cpp  SerialcommGroundOnboard.h  SimpleTimer.h  State_data_manager.h  controllers.h  kinematic_estimators.cpp  matrix_operations.h  testimu.cpp
src/roverbot/misc/QuadControl-cpp-master/working_source_codes/: I2Cdev.cpp  MPU6050.cpp  pwm_4motor.h  timeSeqFilters.cpp
src/roverbot/misc/QuadControl-cpp-master/xbee_testing/: .cproject.xml
src/roverbot/misc/src/: main.cpp  matrix_operations.cpp  pwm_4motor.h
src/roverbot/motori2c/motori2c/: motori2c.ino
src/roverbot/src/: rover_battery_publish.cpp  rover_cam_publish.cpp  rover_i2c_looper.cpp  rover_publish_imu.cpp  rover_publish_sonar.cpp  rover_pwm_ctrl.cpp
